--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                 <div class="w-36 h-36 bg-gray-200/50 rounded-3xl mx-auto mb-8 flex items-center justify-center border border-gray-300/50">
                     <!-- ロゴ画像は後からここに挿入します -->
                 </div>
-                <h1 class="text-4xl font-bold text-gray-800" style="font-family: 'Noto Sans JP', sans-serif;">じぶん予算</h1>
+                <img src="/web-app-manifest-192x192.png" alt="じぶん予算 ロゴ" class="mx-auto mb-4 h-24 w-24">
+                <h1 class="text-4xl font-bold text-gray-800">じぶん予算</h1>
                 <div class="mt-4 text-gray-600">
                     <p class="font-semibold">計画、記録、振り返り。</p>
                     <p class="text-sm">シンプルなサイクルで暮らしを整えるじぶんだけの予算管理アプリ。</p>
