--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
         <!-- タイトル画面 -->
         <div id="title-screen" class="space-y-6 fade-in">
              <div class="text-center pt-8 pb-8">
-                <div class="w-36 h-36 bg-gray-200/50 rounded-3xl mx-auto mb-8 flex items-center justify-center border border-gray-300/50">
-                    <!-- ロゴ画像は後からここに挿入します -->
-                </div>
-                <img src="/web-app-manifest-192x192.png" alt="じぶん予算 ロゴ" class="mx-auto mb-4 h-24 w-24">
+                <div class="div-border-gray-500 rounded-bl-3xl rounded-tr-3xl bg-gray-200/50 mx-auto mb-8 flex items-center justify-center border border-gray-500/50 h-36 w-36">
+  <img src="/web-app-manifest-192x192.png" alt="じぶん予算 ロゴ" class="mb-4 h-24 w-24">
+</div>
                 <h1 class="text-4xl font-bold text-gray-800">じぶん予算</h1>
                 <div class="mt-4 text-gray-600">
                     <p class="font-semibold">計画、記録、振り返り。</p>
