--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <!-- タイトル画面 -->
         <div id="title-screen" class="space-y-6 fade-in">
              <div class="text-center pt-8 pb-8">
-              <img src="/web-app-manifest-192x192.png" alt="じぶん予算 ロゴ" class="mb-4 h-24 w-24 rounded-bl-3xl rounded-tr-3xl">
+              <img src="/web-app-manifest-192x192.png" alt="じぶん予算 ロゴ" class="block mx-auto mb-4 h-24 w-24 rounded-3xl">
                 <h1 class="text-4xl font-bold text-gray-800">じぶん予算</h1>
                 <div class="mt-4 text-gray-600">
                     <p class="font-semibold">計画、記録、振り返り。</p>
