--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
+        input[type="date"] {
+             line-height: 1.25; /* PWAで表示した際に日付部分のボックスが大きくなる問題の修正 */
+        }
         input[type="date"]:not(:valid)::before {
             content: attr(placeholder);
             color: #9ca3af;
@@ -206,8 +209,8 @@
             <div id="summary-card" class="card p-6 rounded-2xl">
                 <div class="space-y-2 mb-6">
                     <div class="flex justify-between items-end">
-                        <p id="summary-title" class="text-sm text-gray-500"></p>
-                        <div class="text-right leading-none">
+                        <p id="summary-title" class="text-sm text-gray-500 truncate shrink min-w-0"></p>
+                        <div class="text-right leading-none flex-shrink-0 ml-4">
                             <span id="remaining-amount" class="text-4xl font-bold text-gray-800"></span>
                             <span id="total-budget-subtext" class="text-base font-medium text-gray-500 ml-1"></span>
                         </div>
