--- a/index.html
+++ b/index.html
@@ -25,12 +25,9 @@
         }
         /* PWAで表示した際に日付部分のボックスが大きくなる問題の修正 */
         input[type="date"] {
-             padding-top: 0.5rem;
-             padding-bottom: 0.5rem;
-        }
-        #start-date-input, #end-date-input {
-            padding-top: 0.75rem;
-            padding-bottom: 0.75rem;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
         }
         input[type="date"]:not(:valid)::before {
             content: attr(placeholder);
@@ -1463,5 +1460,6 @@
     </script>
 </body>
 </html>
+
 
 
